First pass at maven2 for the jaxws component... A few tests commented out for the moment because they fail (and don't with maven1).